# Image-Processor-FastAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
scripts/: process_initial_data.py
src/api/: routes.py  schemas.py
src/config/: database.py  settings.py
src/core/: exceptions.py  log_handlers.py  middleware.py
src/domain/entities/: image.py
src/domain/interfaces/: repositories.py
src/domain/services/: color_map.py
src/infrastructure/database/: models.py  repositories.py
src/infrastructure/services/: image_processor.py
tests/test_api/: test_routes.py
